--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-  }
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+@font-face {
+  font-family: 'WindowsCommandPrompt';
+  src: url('./src/assets/fonts/wcp.ttf');
+}
