--- a/style.css
+++ b/style.css
@@ -5,6 +5,6 @@ html, body {
 }
 
 @font-face {
-  font-family: 'WindowsCommandPrompt';
-  src: url('./src/assets/fonts/wcp.ttf');
+  font-family: 'PerfectDOS';
+  src: url('./src/assets/fonts/pdos.ttf') format('truetype');
 }
